--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js"
   },
-  "keywords": ["obsidian.md","imgur.com"],
+  "keywords": [
+    "obsidian.md",
+    "imgur.com"
+  ],
   "author": "Kirill Gavrilov",
   "license": "MIT",
   "devDependencies": {
@@ -19,5 +22,8 @@
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "obsidian-http-request": "^1.4.0"
   }
 }
