--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/node": "^14.14.2",
+    "@types/node-fetch": "^2.5.10",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "axios": "^0.21.1",
+    "node-fetch": "^2.6.1",
     "obsidian-http-request": "^1.4.0"
   }
 }
