--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,12 @@
     "inlineSources": true,
     "module": "ESNext",
     "target": "es5",
+    "downlevelIteration": true,
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "lib": [
-      "dom",
-      "es5",
-      "scripthost",
-      "es2015"
-    ]
+    "lib": ["dom", "es5", "scripthost", "es2015", "es2020", "ESNext"]
   },
-  "include": [
-    "**/*.ts"
-  ]
+  "include": ["**/*.ts"]
 }
