--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@types/electron": "^1.6.10",
     "@types/node": "^14.14.2",
     "@types/node-fetch": "^2.5.10",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
@@ -25,8 +27,6 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@rollup/plugin-json": "^4.1.0",
-    "node-fetch": "^2.6.1",
-    "obsidian-http-request": "^1.4.0"
+    "node-fetch": "^2.6.1"
   }
 }
