--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "obsidian-imgur-plugin",
   "version": "0.9.6",
-  "description": "This plugin uploads images from your clipboard to imgur.com and embeds uploaded image to your note",
+  "description": "This plugin uploads images from your clipboard by picGo and embeds uploaded image to your note",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
