--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/electron": "^1.6.10",
     "@types/node": "^14.14.2",
     "@types/node-fetch": "^2.5.10",
-    "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "obsidian": "^0.12.2",
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
