--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "rollup": "^2.32.1",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "fix-path": "^4.0.0"
   }
 }
