--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "obsidian-image-auto-upload-plugin",
-  "name": "Image auto upload Plugin",
+  "id": "picgo-image-uploader",
+  "name": "picgo image uploader",
   "version": "2.6.2",
   "minAppVersion": "0.10.7",
   "description": "This plugin uploads images from your clipboard by PicGo",
-  "author": "renmu",
+  "author": "zk",
   "authorUrl": "https://github.com/renmu123/obsidian-image-auto-upload-plugin",
   "isDesktopOnly": false
 }
