--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "id": "picgo-image-uploader",
-  "name": "picgo image uploader",
+  "id": "zk-image-uploader",
+  "name": "zk image uploader",
   "version": "2.6.2",
   "minAppVersion": "0.10.7",
   "description": "This plugin uploads images from your clipboard by PicGo",
