--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@types/electron": "^1.6.10",
     "@types/node": "^14.14.2",
-    "esbuild-plugin-copy": "^2.0.1",
     "obsidian": "^0.15.9",
     "rollup": "^2.32.1",
+    "rollup-plugin-copy": "^3.4.0",
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
